--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>        
       </div>
       <div class="about" id="about">
-        <img src="/images/фон2.png" alt="la">
+        <img src="./images/фон2.png" alt="la">
         <div class="about-content">
           <h2>О компании</h2>
           <p>Компания “Экопланета” - это<br>компания по проектированию<br>ландшафта была создана в<br>2018 году в городе Пинск.</p>
@@ -27,17 +27,17 @@
         <div class="slider">
             <div class="slides">
               <div class="slide">
-                <img src="/images/example1.png" alt="Slide 1">
+                <img src="./images/example1.png" alt="Slide 1">
                 <h3>Проектирование ландшафта</h3>
                 <a href="подробнее1.html">Подробнее 🠖</a>
               </div>
               <div class="slide">
-                <img src="/images/example1.png" alt="Slide 2">
+                <img src="./images/example1.png" alt="Slide 2">
                 <h3>Проектирование ландшафта</h3>
                 <a href="подробнее2.html">Подробнее 🠖</a>
               </div>
               <div class="slide">
-                <img src="/images/example1.png" alt="Slide 3">
+                <img src="./images/example1.png" alt="Slide 3">
                 <h3>Проектирование ландшафта</h3>
                 <a href="подробнее3.html">Подробнее 🠖</a>
               </div>
@@ -52,7 +52,7 @@
             <div class="slides1">
               <div class="slide1">
                 <div class="slide-content">
-                  <img src="/images/image 5.png" alt="Slide 1">
+                  <img src="./images/image 5.png" alt="Slide 1">
                   <div class="text-content">
                     <h3>Марина Альбекова</h3>
                     <p>
@@ -68,7 +68,7 @@
               </div>
               <div class="slide1">
                 <div class="slide-content">
-                  <img src="/images/image 5.png" alt="Slide 1">
+                  <img src="./images/image 5.png" alt="Slide 1">
                   <div class="text-content">
                     <h3>Марина Альбекова</h3>
                     <p>
@@ -84,7 +84,7 @@
               </div>
               <div class="slide1">
                 <div class="slide-content">
-                  <img src="/images/image 5.png" alt="Slide 1">
+                  <img src="./images/image 5.png" alt="Slide 1">
                   <div class="text-content">
                     <h3>Марина Альбекова</h3>
                     <p>
